--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -68,7 +68,6 @@ li.todo-list {
 	overflow: hidden;
 	&__item {
 		max-width: 1060px;
-		background-color: var(--c-white);
 		border: none;
 		& .handle {
 			margin-right: 16px;
@@ -87,13 +86,12 @@ li.todo-list {
 	overflow: hidden !important;
 	padding: 0 !important;
 	// .todo-list__item
-	li {
-		color: var(--c-black) !important;
-	}
+
 	&__item {
 		display: flex;
 		justify-content: flex-start;
 		flex-direction: column;
+		padding: 0 !important;
 		&:not(:last-child) {
 			margin-bottom: 32px;
 		}
@@ -103,6 +101,7 @@ li.todo-list {
 		display: flex;
 		justify-content: space-between;
 		align-items: flex-start;
+		background-color: #fff;
 	}
 }
 
@@ -112,6 +111,7 @@ li.todo-list {
 	flex-direction: column;
 	box-shadow: none;
 	margin-bottom: 0;
+
 	// .accordion__item
 
 	&__header {
@@ -120,6 +120,9 @@ li.todo-list {
 		align-items: center;
 		column-gap: 16px;
 	}
+	&__body {
+		padding: 0;
+	}
 	&__header-content {
 		max-width: 965px;
 		display: flex;
@@ -127,6 +130,7 @@ li.todo-list {
 		align-items: center;
 		justify-content: space-between;
 		width: 100%;
+		color: var(--c-black);
 	}
 	// .accordion__name
 
@@ -170,11 +174,6 @@ li.todo-list {
 .list-accordion {
 	// .list-accordion__head
 
-	&__head {
-		margin: 16px 0;
-		color: var(--c-gray-3);
-		font-size: 14px;
-	}
 	&__head,
 	&__item {
 		display: grid;
@@ -188,6 +187,7 @@ li.todo-list {
 	}
 	&__item {
 		padding: 0 !important;
+		color: var(--c-black) !important;
 		&:not(:last-child) {
 			margin-bottom: 16px;
 		}
@@ -195,6 +195,9 @@ li.todo-list {
 	&__head {
 		font-family: var(--font-RF);
 		margin-bottom: 16px;
+		margin: 16px 0;
+		color: var(--c-gray-3) !important;
+		font-size: 14px;
 	}
 
 	&__name {
@@ -216,6 +219,7 @@ li.todo-list {
 	margin-top: 16px;
 	display: flex;
 	justify-content: space-between;
+	color: var(--c-black);
 	&__btn-add-item {
 		display: flex;
 		align-items: center;
