--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -8,6 +8,7 @@
 	--c-white: #fff;
 	--c-black: #102938;
 	--c-green: #0db25a;
+	--c-hover-green: #009e61;
 	--c-gray-1: #ced8e3;
 	--c-gray-2: #b3bdc8;
 	--c-gray-3: #92a1b1;
