--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -212,6 +212,14 @@
 	}
 }
 // button
+.butt {
+	background-color: var(--bg);
+	padding: 8.5px 12px;
+	line-height: 1.35;
+	font-size: 14px;
+	border-radius: 4px;
+	font-family: var(--font-RF);
+}
 .add-btn {
 	background-color: var(--bg);
 	position: relative;
@@ -259,6 +267,7 @@
 		transform: translate(-50%, -50%);
 	}
 }
+
 .btn-del-big {
 	display: flex;
 	align-items: center;
@@ -274,6 +283,53 @@
 	&::before {
 		left: 0;
 		transform: translate(8px, -50%);
+	}
+}
+.btn-dropdown {
+	.btn {
+		padding-top: 8.5px !important;
+		padding-bottom: 8.5px !important;
+		font-size: 14px;
+		line-height: 1.35;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border: none;
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: var(--c-hover-green) !important;
+			}
+		}
+	}
+	.btn-dropdown {
+		background-color: var(--c-green) !important;
+	}
+	.dropdown-toggle {
+		&::after {
+			content: "";
+			border: 0;
+			background: url("../img/icons/iconDropDown.svg") 0 0 no-repeat;
+			width: 16px;
+			height: 16px;
+			margin: 0;
+		}
+	}
+	.dropdown-menu {
+		padding: 0;
+		margin: 0;
+		border-radius: 8px;
+		padding: 4px;
+		box-shadow: 0px 6px 40px rgba(0, 60, 92, 0.14);
+		border: none;
+	}
+	.dropdown-item {
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: var(--bg);
+				color: var(--c-black);
+				border-radius: 4px;
+			}
+		}
 	}
 }
 // input
