--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -6,6 +6,9 @@
 		margin-bottom: 24px;
 	}
 }
+.content-wrapper {
+	background-color: var(--bg);
+}
 // title
 :is(.big-title, .middle-title, .very-small) {
 	line-height: 1.2;
@@ -121,6 +124,8 @@
 .select2-selection__rendered {
 	display: inline-block;
 	padding: 4px;
+	color: var(--c-black) !important;
+	font-weight: 400 !important;
 	&[title="Выполнено"] {
 		background-color: var(--bg-completed);
 		color: var(--c-completed);
@@ -321,6 +326,7 @@
 		padding: 4px;
 		box-shadow: 0px 6px 40px rgba(0, 60, 92, 0.14);
 		border: none;
+		z-index: 1001;
 	}
 	.dropdown-item {
 		@media (any-hover: hover) {
