--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -66,9 +66,10 @@
 }
 li.todo-list {
 	overflow: hidden;
+
 	&__item {
-		max-width: 1060px;
 		border: none;
+		background-color: var(--c-white);
 		& .handle {
 			margin-right: 16px;
 			margin-left: 0;
@@ -94,20 +95,27 @@ li.todo-list {
 	border-radius: 8px;
 	border: 0;
 	margin: 12px 0;
+	box-shadow: inset 0 0px 20px #10293827;
 }
 .todo-list {
 	overflow: hidden !important;
 	padding: 0 !important;
 	// .todo-list__item
-
+	&__wrapper {
+		max-width: 1060px;
+	}
 	&__item {
 		display: flex;
 		justify-content: flex-start;
 		flex-direction: column;
-		padding: 0 !important;
+		padding: 16px !important;
+		border-radius: 8px !important;
+		background-color: var(--c-white);
 		&:not(:last-child) {
 			margin-bottom: 32px;
 		}
+	}
+	&__wrapper {
 	}
 	// .todo-list__contetn
 	&__contetn {
