--- a/src/assets/scss/_icon.scss
+++ b/src/assets/scss/_icon.scss
@@ -5,7 +5,9 @@
 		._icon-priceList,
 		._icon-client,
 		._icon-pattern,
-		._icon-calendar
+		._icon-calendar,
+		._icon-close,
+		._icon-folder
 	) {
 	&::before {
 		content: "";
@@ -14,7 +16,7 @@
 		display: inline-block;
 	}
 }
-:where(._icon-dashboard, ._icon-priceList, ._icon-client, ._icon-pattern) {
+:where(._icon-dashboard, ._icon-priceList, ._icon-client, ._icon-pattern, ._icon-folder) {
 	&::before {
 		margin-right: 8px;
 		transform: translateY(3px);
@@ -69,6 +71,20 @@
 		width: 20px;
 		height: 20px;
 		transform: translateY(6px);
+	}
+}
+._icon-close {
+	&::before {
+		background-image: url(../img/icons/iconClose.svg);
+		background-position: 50% 50%;
+		width: 20px;
+		height: 20px;
+	}
+}
+
+._icon-folder {
+	&::before {
+		background-image: url("../img/icons/iconFolder.svg");
 	}
 }
 ._icon-darag {
