--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -21,6 +21,16 @@
 	color: var(--c-black) !important;
 	font-size: 14px;
 	line-height: 1.35;
+	display: inline-block;
+	width: 100% !important;
+	transition: none !important;
+}
+.nav-link._active-page {
+	background-color: var(--bg);
+	border-radius: 4px;
+}
+.nav-item {
+	width: 100%;
 }
 .image {
 	padding-left: 0 !important;
@@ -62,6 +72,11 @@
 	&__del-btn {
 		display: flex;
 		align-items: center;
+	}
+	&__butt-plus {
+		display: flex;
+		justify-content: center;
+		padding: 8px 75px;
 	}
 }
 li.todo-list {
