--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -12,6 +12,7 @@
 	--c-gray-1: #ced8e3;
 	--c-gray-2: #b3bdc8;
 	--c-gray-3: #92a1b1;
+	--gray-4: #dbe5f0;
 	--bg: #f0f4f9;
 	--bg-completed: #c9f8de;
 	--c-completed: #009b48;
