--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -22,6 +22,10 @@
 	--c-cancelled: #566575;
 	--bg-postponed: #ffe992;
 	--c-postponed: #d38500;
+	--bg-mar-category: #ffeaa9;
+	--bg-rab-category: #cff8c9;
+	--bg-meh-category: #c6edff;
+	--bg-doc-category: #c6c6ff;
 }
 // Подключение миксинов ===========================================================================================================================================================================================================================================================================
 
