--- a/src/assets/scss/_icon.scss
+++ b/src/assets/scss/_icon.scss
@@ -8,7 +8,8 @@
 		._icon-calendar,
 		._icon-close,
 		._icon-folder,
-		._icon-arrow-back
+		._icon-arrow-back,
+		._icon-imp-data
 	) {
 	&::before {
 		content: "";
@@ -96,6 +97,15 @@
 
 		width: 24px;
 		height: 24px;
+	}
+}
+._icon-imp-data {
+	&::before {
+		background: url("../img/icons/iconImpData.svg") 0 0 no-repeat;
+		width: 16px;
+		height: 16px;
+
+		margin-left: 8px;
 	}
 }
 ._icon-darag {
