--- a/src/assets/scss/_price-list.scss
+++ b/src/assets/scss/_price-list.scss
@@ -18,6 +18,34 @@
 		font-size: 14px;
 		line-height: 1.35;
 		cursor: pointer;
+		position: relative;
+
+		&[aria-sort]::after {
+			content: "";
+			background: url("../img/icons/arrowDownSort.svg") 0 0 no-repeat;
+			width: 12px;
+			height: 12px;
+			position: absolute;
+			top: 50%;
+			left: 0%;
+
+			transform: translate(0px, -50%);
+		}
+		&[aria-sort]::before {
+			content: "";
+			background-color: var(--c-white);
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+		}
+		&[aria-sort="ascending"]::after {
+			transform: translate(0px, -50%) rotate(0deg);
+		}
+		&[aria-sort="descending"]::after {
+			transform: translate(0px, -50%) rotate(180deg);
+		}
 	}
 
 	&__grid {
@@ -33,6 +61,34 @@
 			color: var(--c-gray-3);
 			font-size: 14px;
 			line-height: 1.2;
+		}
+	}
+}
+.dataTables_filter {
+	label {
+		width: 100%;
+		margin: 0;
+		margin-bottom: 16px;
+		border-radius: 0;
+		position: relative;
+		&::after {
+			content: "";
+			background: url("../img/icons/iconSearch.svg") 0 0 no-repeat;
+			width: 20px;
+			height: 20px;
+			position: absolute;
+			right: 0;
+			top: 2px;
+		}
+		input {
+			border: none;
+			border-bottom: 1px solid var(--c-gray-2);
+			border-radius: 0 !important;
+			padding: 8.5px 0 !important;
+			height: 37px;
+			&:focus {
+				border-bottom: 1px solid var(--c-black);
+			}
 		}
 	}
 }
