--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -9,16 +9,9 @@
 .content-wrapper {
 	background-color: var(--bg);
 }
-// sidebar
 
-.secondary-sidebar {
-	color: var(--c-black);
-	&.control-sidebar-dark {
-		background-color: var(--c-white);
-		box-shadow: 0px 6px 40px rgba(0, 60, 92, 0.14);
-		max-width: 500px;
-		width: 100%;
-	}
+.layout-fixed .control-sidebar .control-sidebar-content {
+	height: 100%;
 }
 
 // title
@@ -135,6 +128,24 @@
 			}
 		}
 	}
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+	background-color: var(--bg);
+	color: var(--c-black);
+	border-color: var(--bg) !important;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+	color: var(--c-black);
+	@media (any-hover: hover) {
+		&:hover {
+			color: inherit;
+		}
+	}
+}
+.select2-container--default.select2-container--focus .select2-selection--multiple,
+.select2-container--default.select2-container--focus .select2-selection--single {
+	border: none;
+	border-bottom: 1px solid var(--c-gray-2);
 }
 .select2-selection__rendered {
 	display: inline-block;
@@ -407,6 +418,10 @@
 	}
 }
 .search-items {
+	// height: 100%;
+	// height: 100%;
+
+	// overflow-y: auto;
 	// .search-items__input
 
 	&__input {
@@ -424,6 +439,8 @@
 		}
 	}
 	&__list {
+		height: 100%;
+
 		margin-bottom: 0;
 	}
 	&__item {
@@ -442,6 +459,13 @@
 		@media (any-hover: hover) {
 			&:hover {
 				background-color: var(--bg);
+			}
+		}
+		a {
+			@media (any-hover: hover) {
+				&:hover {
+					color: inherit;
+				}
 			}
 		}
 	}
@@ -514,5 +538,34 @@
 	&:has(input:checked)::after {
 		opacity: 1;
 		visibility: visible;
+	}
+}
+.bc {
+	// .bc__list
+
+	&__list {
+		display: flex;
+		li {
+			font-size: 14px;
+			line-height: 1.35;
+			&::after {
+				content: "/";
+
+				margin: 0px 4px;
+			}
+			&:last-child {
+				&::after {
+					content: "";
+				}
+				font-weight: 700;
+			}
+			a {
+				@media (any-hover: hover) {
+					&:hover {
+						color: inherit;
+					}
+				}
+			}
+		}
 	}
 }
