--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -6,6 +6,10 @@
 		margin-bottom: 24px;
 	}
 }
+.wrapper-container-content {
+	display: flex;
+	column-gap: 24px;
+}
 .content-wrapper {
 	background-color: var(--bg);
 }
@@ -421,6 +425,19 @@
 	}
 }
 
+.textarea-default {
+	border: 1px solid var(--c-gray-2);
+	width: 100%;
+	border-radius: 8px;
+	padding: 6px;
+	height: 100px;
+	resize: none;
+	&:focus {
+		outline: none;
+		border-color: var(--c-black);
+	}
+}
+
 .search-items {
 	// height: 100%;
 	// height: 100%;
@@ -570,6 +587,28 @@
 					}
 				}
 			}
+		}
+	}
+}
+// modal
+.modal-lg {
+	max-width: 600px;
+}
+.modal-custom {
+	border-radius: 8px;
+	background-color: var(--bg);
+	padding: 16px;
+	border: none;
+	&__content {
+		border-radius: 8px;
+		padding: 16px;
+		background-color: var(--c-white);
+	}
+
+	&__footer {
+		button {
+			font-size: 16px;
+			line-height: 1.5;
 		}
 	}
 }
