--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -192,6 +192,10 @@ li.todo-list {
 		&:not(:last-child) {
 			margin-bottom: 16px;
 		}
+
+		& input {
+			padding: 0;
+		}
 	}
 	&__head {
 		font-family: var(--font-RF);
