--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -444,27 +444,24 @@
 		border-color: var(--c-black);
 	}
 }
+.search-block {
+	position: relative;
 
+	&::before {
+		content: "";
+		position: absolute;
+
+		top: 5px;
+		right: 0;
+	}
+	input {
+		padding: 8px 0;
+	}
+}
 .search-items {
-	// height: 100%;
-	// height: 100%;
-
-	// overflow-y: auto;
 	// .search-items__input
-
+	.search-block,
 	&__input {
-		position: relative;
-
-		&::before {
-			content: "";
-			position: absolute;
-
-			top: 5px;
-			right: 0;
-		}
-		input {
-			padding: 8px 0;
-		}
 	}
 	&__list {
 		height: 100%;
