--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -118,12 +118,16 @@ li.todo-list {
 		display: flex;
 		align-items: center;
 		column-gap: 16px;
+		&_small-cg {
+			position: relative;
+			column-gap: 8px;
+			padding-left: 24px;
+		}
 	}
 	&__body {
 		padding: 0;
 	}
 	&__header-content {
-		// max-width: 965px;
 		display: flex;
 		column-gap: 48px;
 		align-items: center;
@@ -148,6 +152,8 @@ li.todo-list {
 		transform: translate(0px, -1px);
 	}
 	&__btn {
+		display: flex;
+		align-items: center;
 		&::before {
 			content: "";
 			background: url("../img/icons/arrowAccordion.svg") 0 0 / contain no-repeat;
@@ -155,6 +161,20 @@ li.todo-list {
 			height: 24px;
 			display: inline-block;
 			transform: rotate(0deg);
+		}
+		&_small {
+			position: absolute;
+			width: calc(100% - 40px);
+			height: 100%;
+			left: 8px;
+			&::before {
+				height: 20px;
+			}
+		}
+		.collapsed-card &_small {
+			&::before {
+				margin-top: -4px;
+			}
 		}
 
 		.collapsed-card &::before {
