--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-@import url("https://fonts.googleapis.com/css?family=Roboto+Flex:regular&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Flex:regular,500,600,700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Onest:regular,500,600,700&display=swap");
 
 :root {
@@ -83,5 +83,10 @@ body {
 	// Фикс для слайдеров
 	> * {
 		min-width: 0;
+	}
+}
+@media (any-hover: hover) {
+	a:hover {
+		color: inherit;
 	}
 }
