--- a/src/assets/scss/_null.scss
+++ b/src/assets/scss/_null.scss
@@ -32,7 +32,7 @@ body {
 	line-height: 1.5;
 	font-family: $fontFamily;
 	font-size: $fontSize;
-	//text-rendering: optimizeLegibility;
+	text-rendering: optimizeLegibility;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
