--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -76,7 +76,8 @@ li.todo-list {
 	box-shadow: inset 0 0px 20px #10293827;
 }
 .todo-list {
-	overflow: hidden !important;
+	// overflow-x: hidden !important;
+	overflow: visible;
 
 	// .todo-list__item
 	&__wrapper {
@@ -101,6 +102,7 @@ li.todo-list {
 		background-color: #fff;
 	}
 }
+
 .todo-list > li {
 	padding: 16px;
 }
@@ -194,7 +196,7 @@ li.todo-list {
 }
 .list-accordion {
 	// .list-accordion__head
-
+	overflow: visible;
 	&__head,
 	&__item {
 		display: grid;
@@ -209,6 +211,7 @@ li.todo-list {
 	&__item {
 		padding: 0 !important;
 		color: var(--c-black) !important;
+		overflow: visible;
 		&:not(:last-child) {
 			margin-bottom: 16px;
 		}
@@ -243,12 +246,48 @@ li.todo-list {
 	}
 
 	&__name {
-		overflow: hidden;
-		text-overflow: ellipsis;
+		// overflow: hidden;
+		// text-overflow: ellipsis;
+		position: relative;
+
 		@media (any-hover: hover) {
 			&:hover {
 				overflow: visible;
 				text-wrap: wrap;
+			}
+		}
+	} // .list-accordion__search
+
+	&__search {
+	}
+}
+
+.search-position {
+	position: absolute;
+
+	width: 100%;
+	max-height: 200px;
+	z-index: 1111;
+	overflow-y: auto;
+	padding: 4px;
+	border-radius: 8px;
+	background-color: var(--c-white);
+	box-shadow: 0px 10px 40px rgba(0, 60, 92, 0.14);
+	top: 30px;
+	left: 0;
+	display: none;
+	&._show {
+		display: block;
+	}
+	// .search-position__item
+
+	& li {
+		padding: 8px;
+		cursor: pointer;
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: var(--bg);
+				border-radius: 4px;
 			}
 		}
 	}
