--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -273,7 +273,7 @@ li.todo-list {
 	border-radius: 8px;
 	background-color: var(--c-white);
 	box-shadow: 0px 10px 40px rgba(0, 60, 92, 0.14);
-	top: 30px;
+	top: 100%;
 	left: 0;
 	display: none;
 	&._show {
